--- a/src/main/resources/static/css/cards.css
+++ b/src/main/resources/static/css/cards.css
@@ -14,7 +14,7 @@
 }
 
 .card-header {
-    background: var(--color-primary);
+    background: var(--back-color, var(--color-primary));
     color: white;
     border: none;
     padding: 1.25rem 1.5rem;
