--- a/src/main/resources/templates/propiedades/list.html
+++ b/src/main/resources/templates/propiedades/list.html
@@ -80,7 +80,8 @@
             <div class="col-lg-9">
                 <div class="lista-container">
                     <div class="card">
-                        <div class="card-header bg-success d-flex justify-content-between align-items-center">
+                        <div class="card-header d-flex justify-content-between align-items-center"
+                            style="--back-color:var(--color-success)">
                             <h4 class="mb-0 text-white">
                                 <i class="bi bi-box-seam-fill me-1"></i>Propiedades Adicionales
                                 <span class="badge bg-light text-dark ms-2" th:text="${totalItems}">0</span>
